--- a/src/duy-anh-mart/duy-anh-mart.scss
+++ b/src/duy-anh-mart/duy-anh-mart.scss
@@ -58,8 +58,8 @@ $mainPadding: 30px;
         pointer-events: none;
       }
 
-      input[type='text'],
-      input[type='number'] {
+      input[type="text"],
+      input[type="number"] {
         width: 100px;
       }
     }
@@ -88,7 +88,7 @@ $mainPadding: 30px;
 
     .sessionContainer {
       padding: 15px;
-      border: 1px solid $borderColor;
+      border: 2px solid $borderColor;
       width: calc(100% - 30px); // $mainPadding
 
       .sessionProduct_header {
@@ -104,13 +104,16 @@ $mainPadding: 30px;
         // justify-content: space-between;
         align-items: center;
 
-        .sessionProduct__price {
-          width: 120px;
+        div[class|="sessionProduct__header"] {
+          // border: 1px solid black;
         }
 
-        div[class|=sessionProduct__code],
-        div[class|=sessionProduct__header] {
+        div[class|="sessionProduct__code"],
+        div[class|="sessionProduct__header"] {
           font-size: medium;
+          // border: 1px solid black;
+          // border-left: 1px solid black;
+          // border-right: 1px solid black;
         }
 
         .sessionProduct__code,
@@ -119,8 +122,16 @@ $mainPadding: 30px;
             width: 25px;
           }
 
+          &--price,
+          &--priceTotal {
+            width: 120px;
+            text-align: right;
+          }
+
           &--amount {
-            width: 50px;
+            width: 80px;
+            display: flex;
+            flex-direction: row-reverse;
 
             .sessionProduct__amount {
               border: none;
@@ -155,7 +166,8 @@ $mainPadding: 30px;
       .sessionFooter {
         display: flex;
         margin-top: 20px;
-        justify-content: space-between;
+        justify-content: right;
+        border-top: 1px solid;
 
         .sessionSum {
           font-size: 30px;
