feat(mart): tieng viet

--- a/src/duy-anh-mart/duy-anh-mart.scss
+++ b/src/duy-anh-mart/duy-anh-mart.scss
@@ -97,6 +97,7 @@ $mainPadding: 30px;
     .instructionBoxContainer {
       display: flex;
       justify-content: end;
+      font-size: 14px;
 
       .instructionBox {
         margin-bottom: 30px;
