--- a/src/duy-anh-mart/duy-anh-mart.scss
+++ b/src/duy-anh-mart/duy-anh-mart.scss
@@ -22,6 +22,20 @@ $mainPadding: 30px;
     max-width: 340px;
     margin-right: 25px;
 
+    .instructionBoxContainer {
+      display: flex;
+      justify-content: end;
+      font-size: 14px;
+
+      .instructionBox {
+        margin-bottom: 30px;
+        padding: 20px;
+        width: 314px;
+        border: 1px solid black;
+      }
+    }
+
+
     .scannerInput {
       margin-bottom: 20px;
       width: 250px;
@@ -70,6 +84,12 @@ $mainPadding: 30px;
       input[type="number"] {
         width: 100px;
       }
+
+      .updateProduct__name {
+        input {
+          margin-left: 7px;
+        }
+      }
     }
 
     .existingProductContainer {
@@ -82,6 +102,7 @@ $mainPadding: 30px;
       .addNewProductContainer {
         .newProductName {
           width: 150px;
+          margin-left: 32px;
         }
       }
 
@@ -93,19 +114,6 @@ $mainPadding: 30px;
 
   .rightContainer {
     width: 60%;
-
-    .instructionBoxContainer {
-      display: flex;
-      justify-content: end;
-      font-size: 14px;
-
-      .instructionBox {
-        margin-bottom: 30px;
-        padding: 20px;
-        width: 314px;
-        border: 1px solid black;
-      }
-    }
 
     .sessionContainer {
       padding: 15px;
