feat(mart): add option at bottom

--- a/src/duy-anh-mart/duy-anh-mart.scss
+++ b/src/duy-anh-mart/duy-anh-mart.scss
@@ -257,4 +257,14 @@ $mainPadding: 30px;
       }
     }
   }
+
+}
+
+.hiddenFooterContainer {
+  display: flex;
+  color: #aaa;
+
+  div {
+    margin-right: 20px;
+  }
 }
