feat(mart): when update, also update all ui places

--- a/src/duy-anh-mart/duy-anh-mart.scss
+++ b/src/duy-anh-mart/duy-anh-mart.scss
@@ -221,6 +221,7 @@ $mainPadding: 30px;
 
         .sessionProduct {
           margin: 4px 0;
+          cursor: pointer;
 
           &:hover {
             background-color: goldenrod;
